# ews-skill

./: .gitignore  Cargo.toml  README.md  SKILL.md  config.toml.example
.github/workflows/: release.yml
docs/: openclaw-ops-checklist.md  releasing.md
examples/: openclaw_probe.rs  smoke_test.rs  sync_daemon.rs
openclaw/: stdio-service.example.json
scripts/: ews-skill.env.example  install.sh  smoke_test.sh  uninstall.sh
src/: config.rs  email_service.rs  ews_client.rs  graph_auth.rs  graph_client.rs  lib.rs  skill.rs  sync_engine.rs
src/cache/: db.rs  mod.rs  models.rs  repository.rs
systemd/: ews-skill-sync.service
