[package]
name = "ews-skill"
version = "0.1.0"
edition = "2021"
description = "EWS email client skill for OpenClaw AI agent"
authors = ["EWS Skill"]
license = "MIT"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
quick-xml = { version = "0.31", features = ["serialize"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5.0"
once_cell = "1.19"
parking_lot = "0.12"
toml = "0.8"
curl = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = true

[lib]
name = "ews_skill"
crate-type = ["cdylib", "rlib"]
